@@ -1,8 +1,9 @@
 suil (0.10.11) unstable;
 
+  * Fix some compiler warnings
   * Remove Qt4 support
 
- -- David Robillard <d@drobilla.net>  Mon, 11 Jan 2021 03:30:34 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 11 Jan 2021 13:00:33 +0000
 
 suil (0.10.10) stable;
 
